human-intervention-logs/com.graphql-java:graphql-java:2018-07-30T00-23-12-bfee885/gradle-test/gradle-test-2026-06-06T13-54-44-879682Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: com.graphql-java:graphql-java:2018-07-30T00-23-12-bfee885
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7995-fb7df01c/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar
> Task :relocatedGuavaJar

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7995-fb7df01c/tests/src/com.graphql-java/graphql-java/2018-07-30T00-23-12-bfee885/src/test/java/com_graphql_java/graphql_java/PropertyFetchingImplTest.java:23: error: cannot find symbol
    PropertyDataFetcher.setUseSetAccessible(true);
                       ^
  symbol:   method setUseSetAccessible(boolean)
  location: class PropertyDataFetcher
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7995-fb7df01c/tests/src/com.graphql-java/graphql-java/2018-07-30T00-23-12-bfee885/src/test/java/com_graphql_java/graphql_java/PropertyFetchingImplTest.java:24: error: cannot find symbol
    PropertyDataFetcher.setUseNegativeCache(true);
                       ^
  symbol:   method setUseNegativeCache(boolean)
  location: class PropertyDataFetcher
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7995-fb7df01c/tests/src/com.graphql-java/graphql-java/2018-07-30T00-23-12-bfee885/src/test/java/com_graphql_java/graphql_java/PropertyFetchingImplTest.java:75: error: cannot find symbol
    return DataFetchingEnvironmentImpl.newDataFetchingEnvironment()
                                      ^
  symbol:   method newDataFetchingEnvironment()
  location: class DataFetchingEnvironmentImpl
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7995-fb7df01c/tests/src/com.graphql-java/graphql-java/2018-07-30T00-23-12-bfee885/src/test/java/graphql/GraphQlTests.java:81: error: no suitable method found for parse(InputStream)
      TypeDefinitionRegistry registry = new SchemaParser().parse(inputStream);
                                                          ^
    method SchemaParser.parse(File) is not applicable
      (argument mismatch; InputStream cannot be converted to File)
    method SchemaParser.parse(Reader) is not applicable
      (argument mismatch; InputStream cannot be converted to Reader)
    method SchemaParser.parse(String) is not applicable
      (argument mismatch; InputStream cannot be converted to String)
4 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7995-fb7df01c/tests/src/com.graphql-java/graphql-java/2018-07-30T00-23-12-bfee885/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7995-fb7df01c/tests/src/com.graphql-java/graphql-java/2018-07-30T00-23-12-bfee885/src/test/java/graphql/GraphQlTests.java:81: error: no suitable method found for parse(InputStream)
        TypeDefinitionRegistry registry = new SchemaParser().parse(inputStream);
                                                            ^
      method SchemaParser.parse(File) is not applicable
        (argument mismatch; InputStream cannot be converted to File)
      method SchemaParser.parse(Reader) is not applicable
        (argument mismatch; InputStream cannot be converted to Reader)
      method SchemaParser.parse(String) is not applicable
        (argument mismatch; InputStream cannot be converted to String)
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7995-fb7df01c/tests/src/com.graphql-java/graphql-java/2018-07-30T00-23-12-bfee885/src/test/java/com_graphql_java/graphql_java/PropertyFetchingImplTest.java:23: error: cannot find symbol
      PropertyDataFetcher.setUseSetAccessible(true);
                         ^
    symbol:   method setUseSetAccessible(boolean)
    location: class PropertyDataFetcher
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7995-fb7df01c/tests/src/com.graphql-java/graphql-java/2018-07-30T00-23-12-bfee885/src/test/java/com_graphql_java/graphql_java/PropertyFetchingImplTest.java:24: error: cannot find symbol
      PropertyDataFetcher.setUseNegativeCache(true);
                         ^
    symbol:   method setUseNegativeCache(boolean)
    location: class PropertyDataFetcher
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7995-fb7df01c/tests/src/com.graphql-java/graphql-java/2018-07-30T00-23-12-bfee885/src/test/java/com_graphql_java/graphql_java/PropertyFetchingImplTest.java:75: error: cannot find symbol
      return DataFetchingEnvironmentImpl.newDataFetchingEnvironment()
                                        ^
    symbol:   method newDataFetchingEnvironment()
    location: class DataFetchingEnvironmentImpl
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 11s
13 actionable tasks: 5 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7995-fb7df01c/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for com.graphql-java:graphql-java:2018-07-30T00-23-12-bfee885 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 12s
9 actionable tasks: 1 executed, 8 up-to-date
